Update Instagram DM link format for desktop

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         link = `https://ig.me/m/${IG_USERNAME}`;
       } else {
         // DESKTOP → use numeric DM ID
-        link = `https://www.instagram.com/direct/t/${IG_DM_ID}`;
+        link = `https://ig.me/m/${IG_USERNAME}`;
       }
 
       // 3) Open link
