--- a/index.html
+++ b/index.html
@@ -60,7 +60,16 @@
     // Mobile username
     const IG_USERNAME = "offsidejerseyss";
 
-    const MESSAGE = "Hello! I am your Secret Santa 🎅👀. Just sending you something important…";
+    const MESSAGE = "Hey
+I want to order 2 Retro Jerseys -
+
+- Barcelona 08/09 Home - 
+SIZE - 
+PRINT - MESSI 10
+
+- Argentina 2006 WC Home -
+SIZE - 
+PRINT - MESSI 19";
 
     function isMobile() {
       return /android|iphone|ipad|ipod/i.test(navigator.userAgent);
