--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
     }
   </style>
 </head>
-
 <body>
   <div class="box">
     <h2>🎅 Hello Secret Santa!</h2>
@@ -47,29 +46,15 @@
       ✅ Open Instagram DM<br><br>
       Just <b>paste</b> and hit send. That’s all you need to do! 🎁
     </p>
-
     <p id="status" style="font-size: 14px; opacity: 0.7;"></p>
-
     <button onclick="copyAndOpen()">Click Here 🎄</button>
   </div>
-
   <script>
     // Desktop DM ID (your original)
     const IG_DM_ID = "17843521113492772";
-
     // Mobile username
     const IG_USERNAME = "offsidejerseyss";
-
-    const MESSAGE = "Hey
-I want to order 2 Retro Jerseys -
-
-- Barcelona 08/09 Home - 
-SIZE - 
-PRINT - MESSI 10
-
-- Argentina 2006 WC Home -
-SIZE - 
-PRINT - MESSI 19";
+    const MESSAGE = "Hey I want to order 2 Retro Jerseys - - Barcelona 08/09 Home - SIZE - PRINT - MESSI 10 - Argentina 2006 WC Home - SIZE - PRINT - MESSI 19";
 
     function isMobile() {
       return /android|iphone|ipad|ipod/i.test(navigator.userAgent);
@@ -77,7 +62,6 @@ PRINT - MESSI 19";
 
     function copyAndOpen() {
       const status = document.getElementById("status");
-
       // 1) Copy text
       navigator.clipboard.writeText(MESSAGE)
         .then(() => {
@@ -89,19 +73,17 @@ PRINT - MESSI 19";
 
       // 2) Select link based on device
       let link;
-
       if (isMobile()) {
         // MOBILE → open DM chat via username
-        link = `https://ig.me/m/${IG_USERNAME}`;
+        link = `https:                          
       } else {
-        // DESKTOP → use numeric DM ID
-        link = `https://ig.me/m/${IG_USERNAME}`;
+                                        
+        link = `https://www.instagram.com/direct/t/${IG_DM_ID}`;
       }
 
       // 3) Open link
       window.location.href = link;
     }
   </script>
-
 </body>
 </html>
