Update index.html with new message

--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
     // Mobile username
     const IG_USERNAME = "offsidejerseyss";
 
-    const MESSAGE = "Hello";
+    const MESSAGE = `Hey I want to order 2 Retro Jerseys
+- Barcelona 08/09 Home
+- SIZE
+- PRINT - MESSI 10
+- Argentina 2006 WC Home
+- SIZE
+- PRINT - MESSI 19`;
 
     function isMobile() {
       return /android|iphone|ipad|ipod/i.test(navigator.userAgent);
@@ -96,6 +102,3 @@
 
 </body>
 </html>
-
-
-correct this code. And give me the full code.
